--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,7 @@
 </head>
 <link rel="stylesheet" href="Estilos_alternos.css">
 <body>
+  <div class="container">
   <ul class="nav justify-content-end">
     <li class="nav-item">
       <a class="nav-link active" aria-current="page" href="https://untimexico.org/" target="_blank">UNTI MÉXICO</a>
@@ -31,7 +32,7 @@
 
         <div class="contenedor-izquierdo">
           <center>
-            <button type="button" class="btn btn-light" style="margin-top: 100px;"> <a href="Index.html" style="color: black;">Proyectos</a></button>
+            <button type="button" class="btn btn-light" style="margin-top: 100px;"> <a href="Proyectos.html" style="color: black;">Proyectos</a></button>
             <button type="button" class="btn btn-light" style="margin-top: 10px;"> <a href="Lenguajes.html" style="color: black;">Lenguajes</a></button>
             <button type="button" class="btn btn-light" style="margin-top: 10px;"> <a href="Presentación/Index.html" style="color: black;">Conoceme</a></button>
             <button type="button" class="btn btn-light" style="margin-top: 10px;"> <a href="Contacto.html" style="color: black;">Redes sociales</a></button>
@@ -88,10 +89,12 @@
 
           </div>
       </div>
+    </div>
 
-    
-  
 
+    <div class="container">
+
+    </div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
