Cambios por I mayuscula a minuscula

--- a/Proyectos.html
+++ b/Proyectos.html
@@ -47,7 +47,7 @@
       </div>
       <div class="card-footer">
         <center>
-          <a href="Index.html" <button type="button" class="btn btn-primary">Ir a inicio</button></a>
+          <a href="index.html" <button type="button" class="btn btn-primary">Ir a inicio</button></a>
         </center>
       </div>
     </div>
