--- a/Contacto.html
+++ b/Contacto.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body style="background-color: #FADBB9;">
-    <a href="Index.html"><button type="button" class="btn-close" aria-label="Close"></button></a>
+    <a href="index.html"><button type="button" class="btn-close" aria-label="Close"></button></a>
 
     <div class="card-group">
         <div class="card" style="background-color: #FADBB9;">
