Renovando el index

--- a/index.html
+++ b/index.html
@@ -9,92 +9,60 @@
 </head>
 <link rel="stylesheet" href="Estilos_alternos.css">
 <body>
+
   <div class="container">
-  <ul class="nav justify-content-end">
-    <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="https://untimexico.org/" target="_blank">UNTI MÉXICO</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="https://www.popoloca-tlacoyalco.com/es" target="_blank">Página Ngigua</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="https://www.popoloca-tlacoyalco.com/es/aplicaciones-ngigua" target="_blank">Aplicaciones</a>
-    </li>
-  </ul>
-
-      <div class="container-fluid" style="margin-top: 20px;">
-        <h2 class="titulo">
-          Portafolio Emanuel
-        </h2>
+    <div class="col-3">
+      <div class="list-group">
+        <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
+          The current link item
+        </a>
+        <a href="#" class="list-group-item list-group-item-action">A second link item</a>
+        <a href="#" class="list-group-item list-group-item-action">A third link item</a>
+        <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
+        <a class="list-group-item list-group-item-action disabled" aria-disabled="true">A disabled link item</a>
       </div>
+    </div>
 
-      <div class="contenedor-padre">
-
-        <div class="contenedor-izquierdo">
-          <center>
-            <button type="button" class="btn btn-light" style="margin-top: 100px;"> <a href="Proyectos.html" style="color: black;">Proyectos</a></button>
-            <button type="button" class="btn btn-light" style="margin-top: 10px;"> <a href="Lenguajes.html" style="color: black;">Lenguajes</a></button>
-            <button type="button" class="btn btn-light" style="margin-top: 10px;"> <a href="Presentación/Index.html" style="color: black;">Conoceme</a></button>
-            <button type="button" class="btn btn-light" style="margin-top: 10px;"> <a href="Contacto.html" style="color: black;">Redes sociales</a></button>
-          </center> 
+    <div class="col-9">
+      <div class="card-group">
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-body-secondary">Last updated 3 mins ago</small>
+          </div>
         </div>
-        <div class="contenedor-derecho" style="margin-left: 50px;">
-          
-          <div class="row row-cols-1 row-cols-md-2 g-4">
-            <div class="col">
-              <div class="card" style="height: 200px; width: 300px; margin-left: 190px;" >
-                <center>
-                  <a href="https://iberopuebla-my.sharepoint.com/:u:/g/personal/200555_iberopuebla_mx/EZ-8Gcj3L1dLuSX5hBtbn00BLwsOlSMw4GytzQ_vyE7lVQ?e=5gnFhV" target="_blank">
-                <img src="Imagenes\Kaxruan.png" class="card-img-top" alt="..." style="height: 150px; width: 150px; margin-top: 5px; border-radius: 6px;">
-              </a>
-                </center>
-                <div class="card-body">
-                  <h5 class="card-title">Kaxruan</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card" style="height: 200px; width: 300px; ">
-                <center>
-                  <a href="https://www.facebook.com/share/v/zT4BXE5W8vPtun9P/?mibextid=WC7FNe" target="_blank">
-                    <img src="Imagenes\Videos.jpg" class="card-img-top" alt="..." style="height: 140px; width: 180px; margin-top: 5px; border-radius: 9px;">
-                  </a>
-                </center>
-                <div class="card-body">
-                  <h5 class="card-title">Videos ngigua</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card" style="height: 200px; width: 300px; margin-left: 190px;">
-                <center>
-                  <img src="Imagenes\Vocabulario.jpg" class="card-img-top" alt="..." style="height: 150px; width: 150px; margin-top: 5px; border-radius: 6px;">
-                </center>
-                <div class="card-body">
-                  <h5 class="card-title">Libros ngigua</h5>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card" style="height: 200px;width: 300px;">
-                <center>
-                  <img src="Imagenes\App.jpg" class="card-img-top" alt="..." style="height: 150px; width: 150px; margin-top: 5px; border-radius: 6px;">
-                </center>
-                <div class="card-body">
-                  <h5 class="card-title">App de control</h5>
-                </div>
-              </div>
-            </div>
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
           </div>
-
+          <div class="card-footer">
+            <small class="text-body-secondary">Last updated 3 mins ago</small>
           </div>
+        </div>
+        <div class="card">
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          </div>
+          <div class="card-footer">
+            <small class="text-body-secondary">Last updated 3 mins ago</small>
+          </div>
+        </div>
       </div>
     </div>
+  </div>
 
 
-    <div class="container">
 
-    </div>
+
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
