Estructura del index remodelada

--- a/Proyectos.html
+++ b/Proyectos.html
@@ -157,7 +157,9 @@
         <p class="card-text">Proximamente...</p>
       </div>
       <div class="card-footer">
-        <small class="text-body-secondary">Last updated 3 mins ago</small>
+        <center>
+          <a href="index.html" target="_blank" <button type="button" class="btn btn-primary" >Regresar</button></a>
+        </center>
       </div>
     </div>
     <div class="card">
@@ -167,7 +169,7 @@
         <p class="card-text">Proximamente...</p>
       </div>
       <div class="card-footer">
-        <small class="text-body-secondary">Last updated 3 mins ago</small>
+        <small class="text-body-secondary"></small>
       </div>
     </div>
   </div>
