--- a/index.html
+++ b/index.html
@@ -10,50 +10,62 @@
 <link rel="stylesheet" href="Estilos_alternos.css">
 <body>
 
-  <div class="container">
+  <div class="container" style="margin-top: 40px;">
     <div class="row">
-      <div class="col-3">
+      <div class="col-8">
+        <h2 style="font-family: 'Courier New', Courier, monospace; font-style:initial;">Portafolio de evidencias Emanuel</h2>
+      </div>
+
+      <div class="col-4">
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="https://untimexico.org/" target="_blank">Unti México</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.popoloca-tlacoyalco.com/es" target="_blank">Página ngigua</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row" style="margin-top: 100px;">
+      <div class="col-2">
         <div class="list-group">
-          <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
-            The current link item
-          </a>
-          <a href="#" class="list-group-item list-group-item-action">A second link item</a>
-          <a href="#" class="list-group-item list-group-item-action">A third link item</a>
-          <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
-          <a class="list-group-item list-group-item-action disabled" aria-disabled="true">A disabled link item</a>
+         
+          <a href="Proyectos.html" class="list-group-item list-group-item-action ">Proyectos</a>
+          <a href="Lenguajes.html" class="list-group-item list-group-item-action">Lenguajes</a>
+          <a href="Contacto.html" class="list-group-item list-group-item-action">Redes sociales</a>
         </div>
       </div>
   
-      <div class="col-9">
+      <div class="col-8">
         <div class="card-group">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <center>
+              <a href="https://iberopuebla-my.sharepoint.com/:u:/g/personal/200555_iberopuebla_mx/EZ-8Gcj3L1dLuSX5hBtbn00BVzsZt2PyU4fcgo03HCiMZg?e=RWUOj1" target="_blank">
+                <img src="Imagenes/Kaxruan.png" style="border-radius: 6px; height: 200px; width: 200px; margin-top: 5px;" class="card-img-top" alt="Imagen de Kaxruan">
+              </a>
+            </center>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Kaxruan</h5>
             </div>
             <div class="card-footer">
-              <small class="text-body-secondary">Last updated 3 mins ago</small>
+              <small class="text-body-secondary">22/10/24</small>
             </div>
           </div>
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <center>
+              <a href="">
+                <img src="Imagenes/Videos.jpg" class="card-img-top" style="border-radius: 6px; margin-top: 5px; height: 200px; width: 200px;" alt="Caratula de videos">
+              </a>
+            </center>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">Videos en ngigua</h5>
             </div>
             <div class="card-footer">
-              <small class="text-body-secondary">Last updated 3 mins ago</small>
-            </div>
-          </div>
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            </div>
-            <div class="card-footer">
-              <small class="text-body-secondary">Last updated 3 mins ago</small>
+              <small class="text-body-secondary">22/10/24</small>
             </div>
           </div>
         </div>
