Detalles de fondo y botones

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
   <div class="container" style="margin-top: 40px;">
     <div class="row">
-      <div class="col-8">
-        <h2 style="font-family: 'Courier New', Courier, monospace; font-style:initial;">Portafolio de evidencias Emanuel</h2>
+      <div class="col-6">
+        <h2 style="font-family: 'Courier New', Courier, monospace; font-style:initial; color: white;">Portafolio de evidencias Emanuel</h2>
       </div>
 
-      <div class="col-4">
+      <div class="col-6">
         <ul class="nav justify-content-end">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="https://untimexico.org/" target="_blank">Unti México</a>
@@ -31,7 +31,7 @@
 
   <div class="container">
     <div class="row" style="margin-top: 100px;">
-      <div class="col-2">
+      <div class="col-4">
         <div class="list-group">
          
           <a href="Proyectos.html" class="list-group-item list-group-item-action ">Proyectos</a>
@@ -40,7 +40,7 @@
         </div>
       </div>
   
-      <div class="col-8">
+      <div class="col-7">
         <div class="card-group">
           <div class="card">
             <center>
