--- a/Contacto.html
+++ b/Contacto.html
@@ -6,18 +6,20 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body style="background-color: #FADBB9;">
-    <a href="index.html"><button type="button" class="btn-close" aria-label="Close"></button></a>
+<body style="background-color: black;">
+    <div class="container">
+        <a href="index.html" target="_blank" <button type="button" class="btn btn-primary" >Regresar</button></a>
+      </div>
 
     <div class="card-group">
-        <div class="card" style="background-color: #FADBB9;">
-         <a href="https://www.facebook.com/profile.php?id=100091676081786&mibextid=LQQJ4d" target="_blank"> <img src="Imagenes/Contacto/facebook.svg" class="card-img-top" alt="..." style="height: 380px; margin-top: 130px;"></a> 
+        <div class="card" style="background-color: black">
+         <a href="https://www.facebook.com/profile.php?id=100091676081786&locale=es_LA" target="_blank"> <img src="Imagenes/Contacto/facebook.svg" class="card-img-top" alt="..." style="height: 380px; margin-top: 130px;"></a> 
           
         </div>
-        <div class="card" style="background-color: #FADBB9;">
+        <div class="card" style="background-color: black;">
         <a href="https://www.instagram.com/tays_jm?igsh=ZHhmbmk1eHdnemdp&utm_source=qr" target="_blank"><img src="Imagenes/Contacto/Insta.png" class="card-img-top" alt="..." style="margin-top: 100px;"></a>  
         </div>
-        <div class="card" style="background-color: #FADBB9;">
+        <div class="card" style="background-color: black;">
         <a href="https://www.tiktok.com/@emanuel_jm14?_t=8px0rnLcz7V&_r=1" target="_blank"><img src="Imagenes/Contacto/Tiktok.png" class="card-img-top" alt="..." style="margin-top: 170px; height: 310px; width: 330px; margin-left: 20px;"  ></a>  
         </div>
       </div>
