--- a/Lenguajes.html
+++ b/Lenguajes.html
@@ -6,8 +6,11 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: black;">
         <a href="index.html"><button type="button" class="btn-close" aria-label="Close"></button></a>
+        <div class="container">
+          <a href="index.html" target="_blank" <button type="button" class="btn btn-primary" >Regresar</button></a>
+        </div>
     <div class="row row-cols-1 row-cols-md-2 g-4" style="margin-top: 30px;">
         <div class="col">
           <div class="card">
@@ -16,8 +19,11 @@
             </center>
             <div class="card-body">
                 
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longit longer.</p>
+                    <h5 class="card-title">C++</h5>
+                    <p class="card-text">Nivel: Principiante</p>
+                    <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                      <div class="progress-bar w-25"></div>
+                    </div>
             </div>
           </div>
         </div>
@@ -28,8 +34,11 @@
                 <img src="Imagenes/Lenguajes/Logo_C_sharp.svg.png" class="card-img-top" alt="..." style="height: 150px; width: 150px;"> 
             </center>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">C#</h5>
+              <p class="card-text">Nivel: Avanzado</p>
+              <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar w-75"></div>
+              </div>
             </div>
           </div>
         </div>
@@ -40,8 +49,11 @@
                 <img src="Imagenes/Lenguajes/Php.png" class="card-img-top" alt="..." style="height: 150px; width: 150px;">
             </center>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">Php</h5>
+              <p class="card-text">Nivel: Principiante</p>
+              <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar w-25"></div>
+              </div>
             </div>
           </div>
         </div>
@@ -52,8 +64,11 @@
                 <img src="Imagenes/Lenguajes/Html.jpg" class="card-img-top" alt="..." style="height: 150px; width: 200px;">
             </center>
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">Html y Css</h5>
+              <p class="card-text">Nivel: Avanzado</p>
+              <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar w-75"></div>
+              </div>
             </div>
           </div>
         </div>
