--- a/Proyectos.html
+++ b/Proyectos.html
@@ -158,7 +158,7 @@
       </div>
       <div class="card-footer">
         <center>
-          <a href="index.html" target="_blank" <button type="button" class="btn btn-primary" >Regresar</button></a>
+          <a href="Stackoverflow.html" target="_blank" <button type="button" class="btn btn-primary" >Ver</button></a>
         </center>
       </div>
     </div>
@@ -169,7 +169,9 @@
         <p class="card-text">Proximamente...</p>
       </div>
       <div class="card-footer">
-        <small class="text-body-secondary"></small>
+        <center>
+          <a href="index.html" target="_blank" <button type="button" class="btn btn-primary" >Regresar</button></a>
+        </center>
       </div>
     </div>
   </div>
