--- a/Proyectos.html
+++ b/Proyectos.html
@@ -151,10 +151,10 @@
       </div>
     </div>
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="Imagenes/Logos/Stack.jpg" class="card-img-top" alt="..." style="height: 180; width: 200px;">
       <div class="card-body">
-        <h5 class="card-title">Tareas futuras</h5>
-        <p class="card-text">Proximamente...</p>
+        <h5 class="card-title">StackOverflow</h5>
+        <p class="card-text">Tarea de investigación</p>
       </div>
       <div class="card-footer">
         <center>
